--- a/css_ennsyuumonndai.html
+++ b/css_ennsyuumonndai.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +36,7 @@
         </div>
     </header>
     <main>
-        <img class="firstview" src="img/firstview.jpeg" width="700px" height="500px">
+        <img class="firstview" src="img/firstview.jpeg">
         <p class="main-title">毎日を笑顔に</p>
         <div class="bg"></div>
     </main>
